@@ -1,5 +1,7 @@
 Version 1.7 -Eta Carinae-
 
+* [NEW] Added forum discussion button to wiki page view: allows users to go straight to
+  forum for page discussion.
 * [NEW] Drawings history added. From the admin drawings panel you can view the history,
   remove versions, etc.
 * [NEW] Drawings jGraphPad replaced jHotDraw, lot of new features and tools to edit
